# mqtt-heating-system

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  pyproject.toml  shell.nix  temperature_usage.txt  vcpkg.json  water_temperature_usage.txt
.github/workflows/: ci.yml
client/: main.py
cmake/: CompilerWarnings.cmake  Sanitizers.cmake  StandardProjectSettings.cmake
docs/: generate_doc.js  mqtt_doc.yaml  package-lock.json  package.json
scripts/: apply_autopep8.sh  check_autopep8.sh  clang-format.sh  clang-tidy.sh  linux-build.sh  run-clang-tidy.py  run-client.sh  run-server.sh  run-test.sh
server/: common.py  main.py
server/static/: index.html
server/templates/: index.html
src/: CMakeLists.txt  log.hpp  main.cpp  mqtt_client.hpp
tests/: power_on_test.py  schedule_temp_test.py  statistics_feature_test.py  temperature_test.py  water_temperature_test.py
tests/http_integration_tests/: power_test.py  run_tests.sh  statistics_tests.py  temperature_tests.py  water_temperature_tests.py
tests/http_tests/: power_on_test.sh
tests/integration_tests/: run_tests.sh  schedule_temp_tests.py  shared.py  temperature_tests.py  water_temperature_tests.py
tests/unit/: power_unit_test.py  run_unit_tests.sh  shared.py  temperature_unit_tests.py  water_temperature_unit_tests.py  water_temperature_usage.txt
