[tool.poetry]
name = "server"
version = "0.1.0"
description = "A simple MQTT client for our heating system"
authors = ["Alexandru Ică", "Gherghina Roxana-Ioana", "Cioarec George", "Tudose Mihai Cristian"]

[tool.poetry.dependencies]
python = ">=3.8"
paho-mqtt = ">=1.6.1"
flask = ">=2.0.0"
flask-mqtt = ">=.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = ["poetry.core.masonry.api"]
